SAC 2018 Paper - editing files

--- a/Sac_2018_BetempsPillaZatt (BCKP).tex
+++ b/Sac_2018_BetempsPillaZatt (BCKP).tex
@@ -131,31 +131,31 @@
 % e-mail address with \email.
 %
 	% 1st. author
-%\alignauthor Carlos Michel Betemps\\
-       %\affaddr{Federal University of Pelotas}\\
+\alignauthor Carlos Michel Betemps\\
+       \affaddr{Federal University of Pelotas}\\
        %\affaddr{Graduate Program in Computing}\\
        %\affaddr{UFPel - PPGC}\\
-       %\affaddr{UFPel. Pelotas, RS, Brazil}\\
+       \affaddr{UFPel. Pelotas, RS, Brazil}\\
        %\affaddr{Pelotas, RS, Brazil}\\
-       %\affaddr{Federal University of Pampa}\\
-       %\affaddr{UNIPAMPA. Bagé, RS, Brazil}\\
-       %\email{cm.betemps@inf.ufpel.edu.br}
+       \affaddr{Federal University of Pampa}\\
+       \affaddr{UNIPAMPA. Bagé, RS, Brazil}\\
+       \email{cm.betemps@inf.ufpel.edu.br}
 % 2nd. author
-%\alignauthor Mauricio Lima Pilla\\
-       %\affaddr{Federal University of Pelotas}\\
+\alignauthor Mauricio Lima Pilla\\
+       \affaddr{Federal University of Pelotas}\\
        %\affaddr{Graduate Program in Computing}\\
        %\affaddr{UFPel - PPGC}\\       
-       %\affaddr{UFPel. Pelotas, RS, Brazil}\\
+       \affaddr{UFPel. Pelotas, RS, Brazil}\\
        %\affaddr{Pelotas, RS, Brazil}\\
-       %\email{pilla@inf.ufpel.edu.br}
+       \email{pilla@inf.ufpel.edu.br}
 % 3rd. author
-%\alignauthor Bruno Zatt\\
-       %\affaddr{Federal University of Pelotas}\\
+\alignauthor Bruno Zatt\\
+       \affaddr{Federal University of Pelotas}\\
        %\affaddr{Graduate Program in Computing}\\
        %\affaddr{UFPel - PPGC}\\       
-       %\affaddr{UFPel. Pelotas, RS, Brazil}\\
+       \affaddr{UFPel. Pelotas, RS, Brazil}\\
        %\affaddr{Pelotas, RS, Brazil}\\
-       %\email{zatt@inf.ufpel.edu.br}
+       \email{zatt@inf.ufpel.edu.br}
 }
 % There's nothing stopping you putting the seventh, eighth, etc.
 % author on the opening page (as the 'third row') but we ask,
