--- a/Sac_2018_BetempsPillaZatt.tex
+++ b/Sac_2018_BetempsPillaZatt.tex
@@ -169,7 +169,7 @@
 \maketitle
 
 \begin{abstract}
-This paper presents an evaluation of the Hybrid Memory Cube (HMC) use in the embedded systems context. HMC can provide better performance with less use of energy and area. Embedded systems normally have constraints in energy consumption and area usage, but yet with stringent perfomance requirements. Thus, HMC can be fit in embedded systems to provide a main memory with the needed features. In the experiments, modest configurations of L1 and L2 caches were used in conjunction with a main memory of DDR3 or HMC types. MiBench applications were executed in a 4-CPU architecture simulated at gem5. CasHMC and CACTI were used to make estimations about time, energy, and area. The HMC use allows better estimate for execution time and consumed energy, including situations where L2 cache is dispensable from the memory hierarchy. EDP and EDAP metrics show the higher HMC energy efficiency and higher density compared to DDR3. In average, EDP and EDAP values for HMC configurations were nearly 73\% and 85\% lower, respectively, than DDR3 configurations.
+This paper presents an evaluation of the Hybrid Memory Cube (HMC) use in the embedded systems context. HMC can provide better performance with less use of energy and area. Embedded systems normally have constraints in energy consumption and area usage, but yet with stringent perfomance requirements. Thus, HMC can be fit in embedded systems to provide a main memory with the needed features. In the experiments, modest configurations of L1 and L2 caches were used in conjunction with a main memory of DDR3 or HMC types. MiBench applications were executed in a 4-CPU architecture simulated at gem5. CasHMC and CACTI were used to make estimations about time, energy, and area. The HMC use allows better estimate for execution time and consumed energy, including situations where L2 cache is dispensable from the memory hierarchy. EDP and EDAP metrics show the higher HMC energy efficiency and higher density compared to DDR3. In average, EDP and EDAP values for HMC configurations were nearly 73\% and 85\%, respectively, lower than DDR3 configurations.
 \end{abstract}
 
 
@@ -260,7 +260,7 @@ Focusing on a broader scope, especifically on 3D technology, Zou et al. \cite{zo
 
 Santos et al. \cite{santos2016exploring} explore the use of the reduced latency HMC memories to streaming aplications and point out situations where the use of L3 cache is not necessary. Other work \cite{gokhale2015HMC_Charac_wrklds} deals with performance and energy consumption issues of using a Gen2 HMC memory in the running of data-centered applications - emulation and execution are combined in a FPGA board. Alves et al. \cite{alves2016large} proposes the HIVE architecture, a HMC memory extension to make possible processing-in-memory (PIM) of vector operations, aiming mitigate communication channel contention and cache pollution (caused by ineffective prefetches). \emph{Active Memory Cube} (AMC) is a processing-in-memory architecture presented by Nair et al. \cite{nair2015active} that uses a set of processing units implemented at the HMC's logic layer. 
 
-The works about HMC memories focuses, mainly, on HPC and PIM systems. However, given the HMC features, there's room for research about HMC, like the use of this type of memory in embedded systems. In this work we use HMC as main memory in the embedded systems context and compare its behaviour with DDR3 memories, evaluating the presence (or not) of L2 cache in the memory system hierarchy. The used evaluation parameters are execution time, consumed energy, area, and the derived ones (EDP and EDAP).
+The works about HMC memories focuses, mainly, on HPC and PIM systems. However, given the HMC features, there's room for research about HMC, like the use of this type of memory in embedded systems. In this work we use HMC as main memory in the embedded systems context and compare its behaviour with DDR3 memories, evaluating the presence (or not) of L2 cache in the memory system hierarchy. The used evaluation parameters are execution time, consumed energy, area, and the derived EDP and EDAP.
 
 \begin{figure}
 	\centering
@@ -300,7 +300,7 @@ applications.
 CasHMC \cite{jeon2017cashmc} is a cycle-accurate simulator for hybrid memory cube (HMC). It provides a cycle-by-cycle simulation of every module in an HMC and generates analysis results including af bandwidth graph and statistical data. Memory traces can be provided as input parameter to CasHMC. The CasHMC memory traces must contain information about the execution cycle, the memory address accessed, and the respective performed operation (READ or WRITE).
 
 \subsection{Architecture and Cache Configurations} \label{sec:Arq_Conf}
-The performed simulations have used several configurations to L1i\&d caches (L1 instruction cache and L1 data cache) size and L2 cache size, according to Tab. \ref{tab:Caches-Memory-Settings}. We use modest caches settings and some configurations do not use L2 cache to put more access pressure on the main memory. The main memory type was varied between DDR3 and HMC in the configurations (the first eigth configurations with DDR3 and the last ones with HMC as main memory). Some cache parameters were fixed, as follows: 64B (bytes) cache line size, 2-way L1i\&d associativity, 16-way L2 associativity, and 2GB(bytes) main memory size.
+The performed simulations have used several configurations to L1i\&d caches (L1 instruction cache and L1 data cache) size and L2 cache size, according to Tab. \ref{tab:Caches-Memory-Settings}. We use modest caches settings and some configurations do not use L2 cache to put more access pressure on the main memory. The main memory type was varied between DDR3 and HMC in the configurations (eigth configurations with DDR3 and other eigth with HMC as main memory). Some cache parameters were fixed, as follows: 64B (bytes) cache line size, 2-way L1i\&d associativity, 16-way L2 associativity, and 2GB(bytes) main memory size.
 
 \begin{table}
 	\scriptsize
@@ -320,10 +320,10 @@ The performed simulations have used several configurations to L1i\&d caches (L1 
 
 The configurations aiming is to evaluate the HMC as main memory, considering the use or not of L2 cache. The base configuration use only L1i\&d caches and DDR3 main memory (configuration \#5 in the Tab. \ref{tab:Caches-Memory-Settings}).
 
-The used architecture on the experiments is composed of four processors. The Alg. \ref{alg:Execution-Script} presents an excerpt from the simulation script used to put the applications in execution on each architecture CPU. The \texttt{nohup} allows to run a command ignoring hangup signals, the \texttt{taskset} is used to launch a new command with a given CPU affinity, and the \texttt{\&} instructs the command to run in background.
+The used architecture on the experiments is composed of four processors. The Alg. \ref{alg:Execution-Script} presents an excerpt from the simulation script used to put the applications in parallel execution on each architecture CPU. The \texttt{nohup} allows to run a command ignoring hangup signals, the \texttt{taskset} is used to launch a new command with a given CPU affinity, and the \texttt{\&} instructs the command to run in background.
 
 \subsection{Execution Time Calculation} \label{sec:Exec_Time}
-We calculate the execution time of each application on each configuration based on the \emph{gem5} stats and memory access traces, CACTI estimates, and CasHMC results, as follows. The \emph{Miss Penalty} ($MP$) represents a penalty due a cache miss an is calculated by Eq. \ref{eq:MissPenalty}. For a configuration with L2 cache, the $MP$ for a L1 cache corresponds to the access time in L2 cache. In the case of a NO L2 configuration, the $MP$ is the access time in the main memory (DDR3 or HMC). For convenience, the system $Cycle\,Time$ was set to \texttt{{1ns}}, corresponding to a system clock frequency of \texttt{{1GHz}}.The $MP$ was calculated in cycles with the ceiling operator.
+We calculate the execution time of each application on each configuration based on the \emph{gem5} stats and memory access traces, CACTI estimates, and CasHMC results, as follows. The \emph{Miss Penalty} ($MP$) represents a penalty due a cache miss an is calculated by Eq. \ref{eq:MissPenalty}. For a configuration with L2 cache, the $MP$ for a L1 cache corresponds to the access time in L2 cache. In the case of a NO L2 configuration, the $MP$ is the access time in the main memory (DDR3 or HMC). For convenience, the system $Cycle\,Time$ was set to \texttt{{1ns}}, corresponding to a system clock frequency of \texttt{{1GHz}}. The $MP$ was calculated in cycles with the ceiling operator.
 
 Memory stall cycles ($MSC$) refers to the number of cycles during which the processor is locked waiting for a memory access \cite{hennessypatterson:2012}. The $MSC$ is given by Eq. \ref{eq:MSC}, its value is used to compute the CPU execution time, given by Eq. \ref{eq:CPUExTime} \cite{hennessypatterson:2012}. The terms $\#\,Misses$ and $\#Cycles$ corresponds to number of the cache misses and the executed cycles (of a given CPU), respectively, both obtained from the {\emph{gem5}} stats. The $MSC$ was calculated using the misses number of each cache memory and its respective miss penalty. To determine the CPU time, the number of executed cycles in each CPU was used and the Sum of the $MSC$ values ($SMSC$) of each cache (L1i, L1d, and, when it's the case, L2) were used, according to Eq. \ref{eq:CPUExTime}. Thus, the execution time of each CPU (and, therefore, of each application described in Tab. \ref{tab:Applications-on-CPU}) was calculated.
 
@@ -346,7 +346,7 @@ m5 exit         # exit the simulation
 \end{algorithm}
 
 \subsection{Energy Estimation} \label{sec:Energy_Est}
-{\emph{gem5}} statistics and CACTI estimates were also used to calculate the energy consumed by the caches (L1i\&d and L2). Basically, the \emph{gem5} information is about the number of \emph{read} and \emph{write} operations in the cache memories. The total energy in {\emph{read}} operations ($TERO$) consumed by caches is given by the number of {\emph{Read Operations}}{{} $\#RO$ multiplied by the }{\emph{Read Energy}}{{}$RE$ (Eq. \ref{eq:TERO}). In similar fashion, the total energy in }{\emph{write}}{{} operations ($TEWO$)
+{\emph{gem5}} statistics and CACTI estimates were also used to calculate the energy consumed by the caches (L1i\&d and L2). Basically, the \emph{gem5} information is about the number of \emph{read} and \emph{write} operations in the cache memories. The total energy in {\emph{read}} operations ($TERO$) consumed by caches is given by the number of {\emph{Read Operations}}{{} $\#RO$ multiplied by the }{\emph{Read Energy}} {{}$RE$ (Eq. \ref{eq:TERO}). In similar fashion, the total energy in }{\emph{write}}{{} operations ($TEWO$)
 is calculated by Eq. \ref{eq:TEWO}, where $\#WO$ is the number of }{\emph{Write Operations}}{{} and $WE$ is the }{\emph{Write Energy}}{.
 Both $RE$ and $WE$ are provided by the CACTI tool. For the dynamic energy estimation, the total energy in misses ($TEM$) in each cache
 was calculated by Eq. \ref{eq:TEM}, where $\#M$ is the total number of the cache misses and $AE$ is the value of cache Access Energy.
